Implement code for exporting the project.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <div class="btn-wrap">
               <a href="#" class="btn btn-dark">Import</a>
-              <a href="#" class="btn btn-dark">Export</a>
+              <a href="#" class="btn btn-dark" id="export-btn">Export</a>
             </div>
           </div>
 
