Refactor drag and drop code and change it to inline event handling.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="image-drag-area">
               <label for="input-image" class="btn btn-primary btn-full">Add</label>
 
-              <div class="img-list-drag"></div>
+              <div class="img-list-drag" ondrop="view.__imgOnDrop(event)" ondragover="view.__imgOnDragOver(event)"></div>
             </div>
           </div>
         </div>
