--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="app-wrapper">
       <div class="app-panel">
         <div class="app-inner-wrap spacing-bottom-30 text-center">
-          <h1 class="tier-list-title">Untitled #1</h1>
-          <p class="tier-list-description">A short descripton here.</p>
+          <h1 class="tier-list-title" contenteditable="true" spellcheck="false">Untitled #1</h1>
+          <p class="tier-list-description" contenteditable="true" spellcheck="false">A short descripton here.</p>
         </div>
         <div class="app-inner-wrap spacing-bottom-30">
           <div class="tier-list-box-container"></div>
