Add hover effect and make some adjustments.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TopTier Maker</title>
-
+    <title>TopTier Maker - Web-based Tier Lists Maker app</title>
+    <meta name="description" content="Web-based Tier Lists Maker app with full functionality and minimalist design." />
+    <meta name="keywords" content="toptier, top, tier-lists, tier-maker, list-maker, javascript, web, app" />
+    <meta name="author" content="Muhammad Reza Fahlevi (Rezzvy)" />
+    <meta name="google" content="notranslate" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./css/shared.css" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
@@ -23,7 +27,7 @@
           </div>
         </div>
         <div class="app-inner-wrap text-center">
-          <div class="text"><a href="#">TopTier Maker</a> - Made with lots of ❤️ by <a href="#">Muhd. Reza Fahlevi</a></div>
+          <div class="text"><a href="https://github.com/rezzvy/toptier-maker">TopTier Maker</a> - Made with lots of ❤️ by <a href="https://github.com/rezzvy">Muhd. Reza Fahlevi</a></div>
         </div>
       </div>
       <div class="app-panel">
