Split MVC component into separate files.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./css/shared.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="./css/responsive.css" />
   </head>
   <body>
     <div class="app-wrapper">
@@ -57,6 +57,6 @@
 
     <input type="file" class="none" id="input-image" accept="image/*" />
     <input type="file" class="none" id="import-project" accept=".json" />
-    <script src="./src/app.js"></script>
+    <script src="./src/app.js" type="module"></script>
   </body>
 </html>
