Fix inline event handling not being recognized.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
     <input type="file" class="none" id="input-image" accept="image/*" />
     <input type="file" class="none" id="import-project" accept=".json" />
+
+    <script src="./src/init.js"></script>
     <script src="./src/app.js" type="module"></script>
   </body>
 </html>
