--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="image-drag-area">
               <label for="input-image" class="btn btn-primary btn-full">Add</label>
 
-              <div class="img-list-drag" ondrop="view.__imgOnDrop(event)" ondragover="view.__imgOnDragOver(event)"></div>
+              <div class="img-list-drag" ondrop="__imgOnDrop(event)" ondragover="__imgOnDragOver(event)"></div>
             </div>
           </div>
         </div>
