Enable multiple image input and fix title and description not updating after project import.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
     </div>
 
-    <input type="file" class="none" id="input-image" accept="image/*" />
+    <input type="file" class="none" id="input-image" accept="image/*" multiple/>
     <input type="file" class="none" id="import-project" accept=".json" />
 
     <script src="./src/init.js"></script>
